fix vector globe panning making page scroll on mobile firefox

--- a/styles/globe.css
+++ b/styles/globe.css
@@ -10,8 +10,13 @@
 }
 
 #globe-group:not(.static) > * {
-	touch-action: pinch-zoom;
+	touch-action: none;
 	pointer-events: auto;
+}
+@supports not (touch-action: none) {
+	#globe-group:not(.static) > * {
+		touch-action: pinch-zoom;
+	}
 }
 #globe {
 	position: relative;
